set max-wdith on disc icons to avoid overflow

--- a/wp-theme-files/partials/blocks/flip_discs_section.css
+++ b/wp-theme-files/partials/blocks/flip_discs_section.css
@@ -91,3 +91,7 @@
   text-align: center;
   margin-top: 20px;
 }
+
+.flip-disc .disc-icon{
+  max-width:170px;
+}
